--- a/content/contact.html
+++ b/content/contact.html
@@ -3,23 +3,26 @@ Date = "7/30/2021"
 title = "Contact Me"
 +++
 
-<form method="POST">
-  <label>Comments:
-    <textarea name="comments"></textarea>
-  </label>
-</form>
-After:
+````
+{{< rawhtml >}}
 
-<form name="comments" method="POST" netlify-honeypot="hpfield" netlify>
-  <div class="hpot">
-    <label>Leave this field empty: <input name="hpfield"></label>
-  </div>
-  <label>Comments:
-    <textarea name="comments"></textarea>
-  </label>
-</form>
+<form action="https://docs.google.com/forms/d/e/1FAIpQLScfv3s2pbi4PL7LTIbYn9ecSBMwsjQNFEIx6qsiELtxeojIRA/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true">
+  <label>Name*</label>
+        <input type="text" placeholder="Name*" class="form-input" name="entry.2005620554" required>
 
-// style.css
-.hpot {
-  display: none;
-}
+  <label>Email*</label>
+        <input type="email" placeholder="Email address*" class="form-input" name="entry.1045781291" required>
+
+   <label>Subject*</label>
+        <input type="text" placeholder="Subject*" class="form-input" name="entry.1463872073" required>
+
+   <label>Message</label>
+        <textarea rows="5" placeholder="Message" class="form-input" name="entry.839337160" ></textarea>
+
+   <button type="submit">Send</button>
+</form>
+  
+  
+  
+{{< /rawhtml >}}
+````
