--- a/content/contact.html
+++ b/content/contact.html
@@ -22,7 +22,7 @@ title = "Contact Me"
    <button type="submit">Send</button>
 </form>
   
-  
+<link rel="stylesheet" href="/css/form.css"> 
   
 {{< /rawhtml >}}
 ````
