--- a/content/contact.html
+++ b/content/contact.html
@@ -10,7 +10,7 @@ title = "Contact Me"
 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" 
 onload="if(submitted) {window.location='/thankyou';}"></iframe>
 
-<form action="https://docs.google.com/forms/d/e/<formID>/formResponse" 
+<form action="https://docs.google.com/forms/d/e/1FAIpQLScfv3s2pbi4PL7LTIbYn9ecSBMwsjQNFEIx6qsiELtxeojIRA/formResponse" 
 method="post" target="hidden_iframe" onsubmit="submitted=true;">
 </form>
   
