--- a/content/contact.html
+++ b/content/contact.html
@@ -13,7 +13,7 @@ onload="if(submitted) {window.location='/thankyou';}"></iframe>
 method="post" target="hidden_iframe" onsubmit="submitted=true;">
 </form>
   
-<form action="https://docs.google.com/forms/d/e/1FAIpQLScfv3s2pbi4PL7LTIbYn9ecSBMwsjQNFEIx6qsiELtxeojIRA/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true">
+<form action="https://docs.google.com/forms/d/e/1FAIpQLScfv3s2pbi4PL7LTIbYn9ecSBMwsjQNFEIx6qsiELtxeojIRA/formResponse" method="POST" target="hidden_iframe" onsubmit="submitted=true">
   <label>Name*</label>
         <input type="text" placeholder="Name*" class="form-input" name="entry.2005620554" required>
 
