--- a/content/contact.html
+++ b/content/contact.html
@@ -20,7 +20,7 @@ onload="if(submitted) {window.location='/thankyou';}"></iframe>
         <input type="text" placeholder="Subject*" class="form-input" name="entry.1463872073" required>
 
    <label>Message</label>
-        <textarea rows="7" placeholder="Message" class="form-input" name="entry.839337160" ></textarea>
+        <textarea rows="7" placeholder="Message*" class="form-input" name="entry.839337160" required></textarea>
 
    <button type="submit">Send</button>
 </form>
