--- a/content/contact.html
+++ b/content/contact.html
@@ -11,13 +11,13 @@ onload="if(submitted) {window.location='/thankyou';}"></iframe>
 
 <form action="https://docs.google.com/forms/d/e/1FAIpQLScfv3s2pbi4PL7LTIbYn9ecSBMwsjQNFEIx6qsiELtxeojIRA/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
   <label>Name*</label>
-        <input type="hidden" placeholder="Name*" class="form-input" name="entry.2005620554" required>
+        <input type="text" placeholder="Name*" class="form-input" name="entry.2005620554" required>
 
   <label>Email*</label>
-        <input type="hidden" placeholder="Email address*" class="form-input" name="entry.1045781291" required>
+        <input type="email" placeholder="Email address*" class="form-input" name="entry.1045781291" required>
 
    <label>Subject*</label>
-        <input type="hidden" placeholder="Subject*" class="form-input" name="entry.206859602" required>
+        <input type="text" placeholder="Subject*" class="form-input" name="entry.206859602" required>
 
    <label>Message</label>
         <textarea rows="7" placeholder="Message*" class="form-input" name="entry.839337160"></textarea>
