--- a/content/contact.html
+++ b/content/contact.html
@@ -3,28 +3,29 @@ Date = "7/30/2021"
 title = "Contact Me"
 +++
 
-{{< rawhtml >}}
-
-<script type="text/javascript">var submitted=false;</script>
-<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" 
-onload="if(submitted) {window.location='/thankyou';}"></iframe>
-
-<form action="https://docs.google.com/forms/d/e/1FAIpQLScfv3s2pbi4PL7LTIbYn9ecSBMwsjQNFEIx6qsiELtxeojIRA/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
-  <label>Name*</label>
-        <input type="text" placeholder="Name*" class="form-input" name="entry.2005620554" required>
-
-  <label>Email*</label>
-        <input type="email" placeholder="Email address*" class="form-input" name="entry.1045781291" required>
-
-   <label>Subject*</label>
-        <input type="text" placeholder="Subject*" class="form-input" name="entry.206859602" required>
-
-   <label>Message</label>
-        <textarea rows="7" placeholder="Message*" class="form-input" name="entry.839337160"></textarea>
-
-   <button type="submit">Send</button>
+  <form
+  name="contact"
+  method="POST"
+  netlify-honeypot="bot-field"
+  data-netlify="true"
+>
+  <p class="hidden">
+    <label>
+      Don’t fill this out if you’re human: <input name="bot-field" />
+    </label>
+  </p>
+  <p>
+    <label>Your Name: <input type="text" name="name" /></label>
+  </p>
+  <p>
+    <label>Your Email: <input type="email" name="email" /></label>
+  </p>
+  <p>
+    <label>Message: <textarea name="message"></textarea></label>
+  </p>
+  <div data-netlify-recaptcha="true"></div>
+  <p>
+    <button type="submit">Send</button>
+  </p>
 </form>
-  
-<link rel="stylesheet" href="/css/form.css"> 
-  
-{{< /rawhtml >}}
+
