--- a/content/contact.html
+++ b/content/contact.html
@@ -8,6 +8,7 @@ title = "Contact Me"
   method="POST"
   netlify-honeypot="bot-field"
   data-netlify="true"
+  action="/thankyou.html"
 >
   <p class="hidden">
     <label>
