fixed background color

--- a/content/contact.html
+++ b/content/contact.html
@@ -51,7 +51,7 @@ box-sizing: border-box;
 outline:0;
 }
 
-.form-input:focus { border:2px solid #5E007F; }
+.form-input:focus { border:2px solid #5E007F; background-color: #001438;}
 
 textarea {
 height: 150px;
@@ -66,7 +66,7 @@ background:#BD00FF;
 border-radius:5px;
 border:0;
 cursor:pointer;
-color:white;
+color:#b2ffe2;
 font-size:24px;
 padding-top:10px;
 padding-bottom:10px;
@@ -74,6 +74,6 @@ transition: all 0.3s;
 margin-top:-4px;
 font-weight:700;
 }
-[type="submit"]:hover { background:#5E007F; }
+[type="submit"]:hover { background:#5E007F; color:#b2ffe2;}
 
 </style>
